@startuml
title Abstraction with Youtube Videos

'--------------------------------------------------
' Main driver: creates videos, adds comments, displays
'--------------------------------------------------
class Program {
  - videos : List<Video>
  --
  + Main(args:string[])
  + DisplayAllVideos()
}

'--------------------------------------------------
' Video class: title/author/length + list of Comment
'--------------------------------------------------
class Video {
  - title                  : string
  - author              : string
  - lengthSeconds : int
  - comments        : List<Comment>
  --
  + Video(title:string, author:string, lengthSeconds:int)
  + AddComment(comment:Comment)
  + GetCommentCount() : int
  + GetComments()         : List<Comment>
  + GetTitle()                   : string
  + GetAuthor()               : string
  + GetLengthSeconds()  : int
}

'--------------------------------------------------
' Comment entity: who wrote it + text
'--------------------------------------------------
class Comment {
  - commenterName : string
  - commentText       : string
  --
  + Comment(commenterName:string, commentText:string)
  + GetCommenterName() : string
  + GetCommentText()       : string
}

'--------------------------------------------------
' Relationships
'--------------------------------------------------
Program ..> Video : manages
Video *-- Comment : contains

@enduml